--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device width, initial-scale=1">
 
-  <title> <font color="red">HTML</tittle></font>
+  <title> <font color="red"size="100">RAM MANDIR  TRUST </tittle></font>
   
   <!-- HTML -->
   
@@ -15,8 +15,8 @@
 </head>
 
 <body bgcolor="blyle">
-  <video src="20210830_235815.mp4"width="400"height="600"controls></video>
-  <p><font size="100"><add="43+41"></add></font> </p>
+  <img src="20220103_111632.jpg" alt="" height="600"width="400">
+  <p> </p>
   <!-- Project -->
   <script src="main.js"></script>
 </body>
