--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body bgcolor="blyle">
   <img src="20220103_111632.jpg" alt="" height="600"width="400">
-  <p> </p>
+  <p> <img src="20220102_173712.jpg" alt=""height="600"width="400"></p>
   <!-- Project -->
   <script src="main.js"></script>
 </body>
